# imagelib

./: .gitignore  CLAUDE.md  conftest.py  fsc.py  main.py  pyproject.toml  test_nd.py
.claude/: settings.local.json
imagelib/: __init__.py  dynamic_range.py  extent.py  image.py  image_sequence.py  ndextent.py  ndimage.py  saving.py
src/imagelib/: __init__.py  extent.py  ndimage.py  saving.py
src/imagelib/metrics/: __init__.py  fourier_shell_correlation.py
tests/: test_extent.py  test_image.py  test_image_sequence.py
