[project]
name = "imagelib"
version = "0.1.0"
description = "Module proving an image class with various image processing methods."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.1.0",
    "matplotlib>=3.5.0",
    "numpy>=1.9.0",
    "scipy>=1.1.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.3.4"]
